--- a/package.json
+++ b/package.json
@@ -1,9 +1,8 @@
 {
-  "name": "angular-seed",
-  "private": true,
-  "version": "0.0.0",
-  "description": "A starter project for AngularJS",
-  "repository": "https://github.com/angular/angular-seed",
+  "name": "weather-app",
+  "version": "1.0.0",
+  "description": "An app to look up for weather",
+  "repository": "https://github.com/trofa13/weather-app",
   "license": "MIT",
   "devDependencies": {
     "bower": "^1.7.7",
